@@ -1,5 +1,6 @@
-git HEAD
+Travel::Status::DE::VRR 1.07 - Tue Jan 07 2014
 
+    * efa-m: Add previously undocumented -L option to manual
     * efa-m: Handle UTF8 in place/stop input
     * Travel::Status::DE::EFA: Handle decoded input with non-ASCII characters
 
